<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Your_Score"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewYourPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Your_Points"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Correct_Answers"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewIncorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Incorrect_Answers"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="151dp"
                android:layout_height="131dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/image_content_description"
                android:src="@drawable/brain1" />

            <Button
                android:id="@+id/buttonBackToMain"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:text="@string/Back_Menu"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>