<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    tools:context="com.example.braintraininggame2012519.GameInitializerActivity" >

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        style="?metaButtonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        tools:ignore="UselessParent" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="119dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/image_content_description"
            android:src="@drawable/brain2" />

        <Button
            android:id="@+id/continueGameBtnId"
            style="@color/black_overlay"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/continueGame"
            android:textStyle="bold" />

        <Button
            android:id="@+id/newGameBtnId"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/newGame"
            android:textStyle="bold" />

        <Button
            android:id="@+id/aboutGameBtnId"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about"
            android:textStyle="bold" />

        <Button
            android:id="@+id/exitGameBtnId"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/exit"
            android:textStyle="bold" />
    </LinearLayout>

</FrameLayout>